# MetaCost

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
checkpoints/: proportional_to_occurrence.pkl  propotional_m=10_nr=1.pkl  propotional_m=10_nr=10.pkl  propotional_m=10_nr=100.pkl  propotional_m=20_nr=1.pkl  propotional_m=20_nr=10.pkl  propotional_m=20_nr=100.pkl  propotional_m=30_nr=1.pkl  propotional_m=30_nr=10.pkl  propotional_m=30_nr=100.pkl  random_cost.pkl
docs/: generate_pdfs.sh  metadata.yaml
docs/dokumentacja_wstepna/: dokumentacja_wstepna.md
src/: cost_functions.py  data.py  experiments.py  metacost.py  utils.py
