[tool.poetry]
name = "zum"
version = "0.1.0"
description = ""
authors = ["Piotr Hondra <piotr.hondra@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
ipykernel = "^6.29.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
