[tool.poetry]
name = "zum"
version = "0.1.0"
description = ""
authors = ["Piotr Hondra <piotr.hondra@gmail.com>", "Jan Jeschke"]

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
ucimlrepo = "^0.0.7"
seaborn = "^0.13.2"
imbalanced-learn = "^0.12.3"
tqdm = "^4.66.4"
Jinja2 = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
